--- a/src/cards.css
+++ b/src/cards.css
@@ -18,7 +18,7 @@
     max-width: 1200px;
     margin: 50px auto;
     grid-template-columns: 25% 25% 25% 25%;
-    grid-auto-rows: minmax(250px, auto);
+    grid-auto-rows: minmax(200px, auto);
     grid-gap: 20px;
   }
   
@@ -52,7 +52,7 @@
   .card:hover {
    color: white;
    background-color: #0cbaba;
-   background-image: linear-gradient(315deg, #000 72%, #0cbaba 0%);
+   background-image: linear-gradient(315deg, #000 72%, #ffffff 0%);
    box-shadow: none;
   }
   
@@ -60,8 +60,9 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    object-fit: contain;
+    object-fit: cover;
     width: 100%;
+    height: 250px;
     }
   
   .siteTitle {
